--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "mindmap",
-  "version": "1.0.0",
-  "description": "",
-  "main": "demo.js",
+  "name": "@7polo/mindmap",
+  "version": "1.0.3",
+  "description": "mindmap",
+  "main": "./dist/bundle.js",
   "scripts": {
     "minder-dev": "npx webpack serve",
-    "minder-proc": "webpack"
+    "minder-proc": "webpack --mode production && sh ./_export.sh",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.16.7",
     "hotbox": "github:fex-team/hotbox",
     "kity": "^2.0.4",
     "kityminder-core": "^1.4.50"
@@ -20,8 +20,10 @@
     "@babel/core": "^7.16.12",
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.16.7",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^6.5.1",
     "less": "^4.1.2",
